# gdb

./: .gitignore  CMakeLists.txt  LICENSE  README.md  breakpoint.c  breakpoint.h  cli.c  cli.h  data_utils.c  data_utils.h  hashmap.c  hashmap.h  main.c  operation.c  operation.h  parser.c  parser.h  path_utils.c  path_utils.h  registers.c  registers.h  symbols.c  symbols.h  tracee.h  x86_64.c  x86_64.h
docs/: help.txt
src/: CMakeLists.txt  breakpoint.c  breakpoint.h  cli.c  cli.h  main.c  operation.c  operation.h  print.h  registers.c  registers.h  tracee.h
src/arch/: x86_64.c  x86_64.h
src/elf/: symbols.c  symbols.h
src/utils/: data.c  data_utils.c  data_utils.h  hashmap.c  hashmap.h  parser.c  parser.h  path.c  path.h  path_utils.c
